Fixed cart button alignment

--- a/src/pages/catalogue/card/.module.scss
+++ b/src/pages/catalogue/card/.module.scss
@@ -32,7 +32,6 @@
     }
 }
 svg {
-    // background-color: rgba(13, 218, 33, 0.7);
     padding: 10px 20px;
     border-radius: 10px;
     font-weight: 500;
@@ -46,5 +45,5 @@ svg {
     display: flex;
     justify-content: space-between;
     gap: 0px;
-    
+    align-items: center;    
 }
