--- a/src/pages/login/.module.scss
+++ b/src/pages/login/.module.scss
@@ -5,6 +5,7 @@
     margin-top: 170px;
     flex-direction: column;
     margin-bottom: 400px;
+    transform: scale(100%);
     .top{
         padding: 40px 100px;
         background-color: #8BC0FE;
